--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script>
+  window.SUPABASE_URL = "https://tczqkdvgakkmvpokczow.supabase.co";   // ←あなたのURL
+  window.SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRjenFrZHZnYWtrbXZwb2tjem93Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjE4MTE1NTgsImV4cCI6MjA3NzM4NzU1OH0.A8BCOKjnumgcG0eH-of_cr0ClmqD5JHo-j99w-ASe9s";          // ←あなたのanon key
+  // （任意の調整パラメータ）
+  window.REVEAL_INTERVAL_MS = 900;     // ランキングの発表間隔(ms)
+  window.SHOW_TOP_N = 0;               // 0=全員表示、10=上位10名のみ など
+</script>
+
   </head>
   <body>
     <div id="root"></div>
